fixed grid layout problem in why choose section

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,10 +63,24 @@ span {
   width: 22rem;
   position: relative;
   left: 3.5rem;
+  top: 50px;
 }
 .hero-img-mic img {
   position: relative;
   left: -11rem;
+  top: 50px;
+}
+
+.new-badge {
+  font-size: 18px;
+  padding: 8px 16px;
+  background-color: #00ff88;
+  color: black;
+  font-weight: 700;
+  border-radius: 25px;
+  position: relative;
+  right: -130px;
+  top: -380px;
 }
 .hero-content {
   display: flex;
@@ -260,9 +274,12 @@ iframe {
   flex-direction: row;
   gap: 30px;
 }
+.social-icon {
+  width: 40px;
+}
 .host-socials img {
   border: 1px solid #533c72;
-  width: 40px;
+  width: 20px;
   border-radius: 50%;
   padding: 10px;
 }
